webhook_netpol/simple_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: production
  labels:
    app: nginx2
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
