webhook_netpol/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: production
  labels:
    app: nginx
spec:
  podSelector:
    matchLabels:
      app: nginx
